# opencow

./: .gitattributes  .gitignore  .gitpod.yml  CMakeLists.txt
cmake/: DetectClang.cmake  FixCompileFlags.cmake  filesystem.hxx.in  find_filesystem.cmake
include/opencow/: loader.h
scripts/: bootstrap.sh  configure-for-release.sh
src/: CMakeLists.txt  casemap.c  kernel32.cpp
src/impl/: MbcsBuffer.h  kernel32.cpp  opencow.dsp
tests/simple/: CMakeLists.txt  simple.cpp
